# SkyRadar

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.MD  compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  index.css
client/src/pages/: LeakageDetailPage.test.tsx  LeakageDetailPage.tsx  ResultsPage.tsx  SettingsPage.tsx
client/src/test/: setup.ts
client/src/types/: api.ts
deploy/apt/: sources.list
deploy/nginx/: SkyRadar.conf  nginx.conf
deploy/pyenv/: requirements-dev.txt  requirements.txt
deploy/supervisor/: huey.conf  nginx.conf  skyradar.conf
docs/api/: dingtalk_bot.md  feishu_bot.md  openapi.yaml
docs/backend/: CHECKLIST.md  DECISIONS.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  PLAN.md  PROGRESS.md  REFERENCES.md  RISKS.md  TESTING.md
docs/frontend/: CHECKLIST.md  DECISIONS.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  PLAN.md  PROGRESS.md  REFERENCES.md  RISKS.md  TESTING.md
scripts/: backend_architecture_guard.py  backend_compose_smoke.py  backend_docker_build_smoke.py  backend_github_pat_smoke.py  backend_http_smoke.py  backend_mongo8_smoke.py  backend_openapi_check.py  backend_openapi_secret_scan.py  backend_redis_worker_smoke.py  backend_route_coverage.py  backend_schemathesis_smoke.py  backend_worker_smoke.py  frontend_camoufox_smoke.py  frontend_release_gate_smoke.py
server/: conftest.py
server/api/: __init__.py  shared.py
server/api/docs/: __init__.py  routes.py  schemas.py  service.py
server/api/github_search/: assets.py  repository.py  service.py
server/api/health/: __init__.py  routes.py  schemas.py  service.py
server/api/notifications/: messages.py  repository.py  service.py
server/api/results/: __init__.py  repository.py  routes.py  schemas.py  service.py
server/api/settings/: __init__.py  repository.py  routes.py  schemas.py  service.py
server/api/statistics/: __init__.py  repository.py  routes.py  schemas.py  service.py
server/api/tests/: test_domain_cohesion.py
server/core/: __init__.py  config.py  database.py  logging.py  responses.py
server/core/tests/: test_responses.py
server/integrations/: __init__.py  dingtalk.py  feishu.py  github.py  mail.py
server/tests/: test_architecture_guard.py  test_compose_smoke.py  test_dingtalk_integration.py  test_docker_build_smoke.py  test_feishu_integration.py  test_frontend_release_gate_smoke.py  test_github_integration.py  test_github_pat_smoke.py  test_mail_integration.py  test_mongo8_smoke.py  test_openapi_contract.py  test_openapi_secret_scan.py  test_redis_worker_smoke.py  test_schemathesis_smoke.py
server/workers/: __init__.py  huey_app.py  schedule_tasks.py  search_tasks.py
(+43 files in other folders)
